<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Vhamba Moyeni</string>
    <string name="create_an_account">Create an account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="mm">Month</string>
    <string name="year">Year</string>
    <string name="dd">Day</string>
    <string name="next">Next</string>
    <string name="title">Title</string>
    <string name="full_names">Full Names :</string>
    <string name="surname">Surname</string>
    <string name="gender">Gender</string>
    <string name="phone_number">Phone Number :</string>
    <string name="email_2">Email</string>
    <string name="login">Login</string>
    <string name="full_name">Full Name</string>
    <string name="surname_hint">Surname</string>
    <string name="phone_numbers_hint">Phone Numbers</string>
    <string name="airport_selection">Three common airports you fly to</string>
    <string name="flight_preferences">Flight Preferences</string>
    <string name="card_details">Card Details</string>
    <string name="no_of_bags">No. of Bags</string>
    <string name="food">Food</string>
    <string name="seat">Seat</string>
    <string name="card_number">Card Number</string>
    <string name="card_format">Card Number: XXXX-XXXX-XXXX-XXXX</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="first_airport">First Airport</string>
    <string name="third_airport">Third Airport</string>
    <string name="second_airport">Second Airport</string>
    <string name="q_jump">Q-Jump</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="o_r_tambo">O.R Tambo Intl. Airport</string>
    <string name="cape_town_airport">Cape Town Intl. Airport</string>
    <string name="example_date">20 April 2022</string>
    <string name="departure_time">17:45</string>
    <string name="arrival_time">20:45</string>
    <string name="title_2">Title</string>
    <string name="proceed">Proceed</string>
    <string name="travel_details">Travel Itinerary</string>
    <string name="full_name_a">Full Name</string>
    <string name="matome_modiba">Mbali Khanyile</string>
    <string name="seat_number">Seat Number</string>
    <string name="seat_number_example">23A</string>
    <string name="checked_bags">Checked Bags</string>
    <string name="checkedbags_example">2 x 20kg</string>
    <string name="airline_class">Class</string>
    <string name="economy">Economy</string>
    <string name="pay">Pay</string>
    <string name="ticket_price_example">R 2539.00</string>
    <string name="ticket_price">Ticket Price</string>
    <string name="airplane_class">Class</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="payment_history">History</string>
    <string name="account">Preferences</string>
    <string name="not_available">Not Available</string>
    <string name="next_flight">Next Flight —</string>
    <string name="cem_air">Cem Air</string>
    <string name="south_african_airways">South African Airways</string>
    <string name="sa_airlink">SA Airlink</string>
    <string name="flysafair">Flysafair</string>
    <string name="checked_in">Checked in</string>
    <string name="boarded">Boarded</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="example_time">17:45</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="flight_duration">Duration</string>
    <string name="check">check</string>
    <string name="check_in">Check in</string>
    <string name="bag_drop_code">Bag Drop Code</string>
    <string name="customer_service_emergency">Customer Service/Emergency</string>
    <string name="emergency">Emergency</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete Account</string>
    <string name="none">None</string>
    <string name="date_selection">Date Selection</string>
    <string name="search">Search</string>
    <string name="status">status :</string>
    <string name="seats">Seats :</string>
    <string name="ticket_price_2">Ticket Price :</string>
    <string name="booking_reference">Booking Reference</string>
    <string name="flight_date">Flight Date</string>
    <string name="customer_service">Type in your concern</string>
    <string name="time_and_duration">Time and Duration</string>
    <string name="from_2">From:</string>
    <string name="to_2">To:</string>
    <string name="date_and_time">Date and Time:</string>
    <string name="flight_check_in_service">Flight Check In</string>
</resources>