<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">


    <TextView
        android:id="@+id/fullname_textview3"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/full_name"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fullname_textview4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fullname_textview4"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:gravity="start|center"
        android:paddingStart="5dp"
        android:background="@drawable/background_shape"
        app:layout_constraintDimensionRatio="w,7:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullname_textview3"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/surname_textview3"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/surname"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/fullname_textview4"
        app:layout_constraintTop_toBottomOf="@+id/fullname_textview4" />


    <TextView
        android:id="@+id/surname_textview4"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:gravity="start|center"
        android:paddingStart="5dp"
        android:background="@drawable/background_shape"
        app:layout_constraintEnd_toEndOf="@+id/fullname_textview4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/surname_textview3"
        app:layout_constraintTop_toBottomOf="@+id/surname_textview3"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/phone_number_textview3"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginTop="9dp"
        android:text="@string/phone_numbers_hint"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/surname_textview4"
        app:layout_constraintTop_toBottomOf="@+id/surname_textview4" />

    <TextView
        android:id="@+id/phone_number_textview4"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:gravity="start|center"
        android:paddingStart="5dp"
        android:background="@drawable/background_shape"
        app:layout_constraintEnd_toEndOf="@+id/surname_textview4"
        app:layout_constraintStart_toStartOf="@+id/phone_number_textview3"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_textview3"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/email_textview3"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginTop="14dp"
        android:text="@string/email"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/phone_number_textview4"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_textview4" />

    <TextView
        android:id="@+id/email_textview4"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:gravity="start|center"
        android:paddingStart="5dp"
        android:background="@drawable/background_shape"
        app:layout_constraintEnd_toEndOf="@+id/phone_number_textview4"
        app:layout_constraintStart_toStartOf="@+id/email_textview3"
        app:layout_constraintTop_toBottomOf="@+id/email_textview3"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/dob_textview3"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginTop="17dp"
        android:text="@string/date_of_birth"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/email_textview4"
        app:layout_constraintTop_toBottomOf="@+id/email_textview4" />

    <TextView
        android:id="@+id/dob_textview4"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:gravity="start|center"
        android:paddingStart="5dp"
        android:background="@drawable/background_shape"
        app:layout_constraintEnd_toEndOf="@+id/email_textview4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dob_textview3"
        app:layout_constraintTop_toBottomOf="@+id/dob_textview3"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/title_textview3"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/title"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/dob_textview4"
        app:layout_constraintTop_toBottomOf="@+id/dob_textview4" />

    <TextView
        android:id="@+id/title_textview4"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:gravity="start|center"
        android:paddingStart="5dp"
        android:background="@drawable/background_shape"
        app:layout_constraintEnd_toEndOf="@+id/title_textview3"
        app:layout_constraintStart_toStartOf="@+id/title_textview3"
        app:layout_constraintTop_toBottomOf="@+id/title_textview3"
        tools:ignore="RtlSymmetry" />


    <TextView
        android:id="@+id/gender_textview3"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/gender"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/dob_textview4"
        app:layout_constraintTop_toBottomOf="@+id/dob_textview4" />

    <TextView
        android:id="@+id/gender_textview4"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:gravity="start|center"
        android:paddingStart="5dp"
        android:background="@drawable/background_shape"
        app:layout_constraintEnd_toEndOf="@+id/gender_textview3"
        app:layout_constraintStart_toStartOf="@+id/gender_textview3"
        app:layout_constraintTop_toBottomOf="@+id/gender_textview3"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_materialButton2"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:text="@string/edit"
        app:layout_constraintEnd_toEndOf="@+id/gender_textview4"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="@+id/title_textview4"
        app:layout_constraintTop_toBottomOf="@+id/title_textview4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_materialButton"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="9dp"
        android:text="@string/delete"
        android:theme="@style/Theme.Button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/edit_materialButton2"
        app:layout_constraintStart_toStartOf="@+id/edit_materialButton2"
        app:layout_constraintTop_toBottomOf="@+id/edit_materialButton2" />


</androidx.constraintlayout.widget.ConstraintLayout>


